--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -444,27 +444,61 @@
 			$("#go-collection-modal").leanModal();
 			$("#go-share-modal").leanModal();
 		});
-		function Carousel (el) {
+		function Carousel (el , container) {
 			var nextButton = el.querySelector('.nextButton'),
 					prevButton = el.querySelector('.prevButton'),
 					carousel = el.querySelector('.more-images'),
 					interval;
+
+
+					var checkArrows = function () {
+						clearTimeout(timeout);
+						if (container[0].scrollWidth > $(container).innerWidth()) {
+								$(nextButton).show();
+								$(prevButton).show();
+			        } else {
+								$(nextButton).hide();
+								$(prevButton).hide();
+			        }
+					}
+					var timeout = setTimeout(function() {
+						checkArrows();
+						$(carousel).scroll();
+					},1000);
+
+
 			function setup () {
+				var completeAnimation = function () {
+					if(this.scrollLeft <=0 ) {
+						$(prevButton).hide();
+					}else {
+						$(prevButton).show();
+					}
+					console.log(this.scrollLeft , this.scrollLeft + $(this).innerWidth())
+					if(this.scrollLeft +  $(this).innerWidth() >= this.scrollWidth) {
+						$(nextButton).hide();
+					}else {
+						$(nextButton).show();
+					}
+				}
 				$(nextButton).click(function () {
 						$(carousel).animate({
 							scrollLeft: (carousel.scrollLeft + 230)
-						})
-				})
+						},400, completeAnimation);
+				});
+
 				$(prevButton).click(function () {
 					$(carousel).animate({
 						scrollLeft: (carousel.scrollLeft - 230)
-					})
-				})
+					},400,completeAnimation);
+				});
+				$(carousel).scroll(completeAnimation);
+				$( window ).resize(checkArrows);
 			}
 			setup()
 		}
-		var carousel = new Carousel (document.querySelector('.js-more-carousel'))
-		var carousel = new Carousel (document.querySelector('.js-similar-carousel'))
+		var carousel = new Carousel (document.querySelector('.js-more-carousel') , $('.more'));
+		var carousel = new Carousel (document.querySelector('.js-similar-carousel'), $('.similar'));
 
 
 		var meta;
