antes de pulear

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3696,6 +3696,10 @@ body
 		.header
 			min-height 260px
 
+
+// .blog-article-container.large
+
+
 @media (min-width: 650px)
 	.blog-article-container.large
 		width 100%
