--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -70,7 +70,7 @@
 								</div>
 							</div>
 						</header>
-						<p class="content">I whipped the Scotch tape from my pocket and said y ahora lo que hay que hacer es que todo tenga coherencia para que se puedan ver las cosas bajo.</p>
+						<p class="content">I whipped the Scotch tape from my pocket and said y ahora lo que hay que hacer es que todo tenga coherencia para que se puedan ver las cosas bajo el modelo de lo que es medium</p>
 						<footer class="footer">
 							<p class="date"><i class="bi_interface-clock"></i> June 11, 2014</p>
 							<span class="author">
@@ -93,7 +93,7 @@
 								</div>
 							</div>
 						</header>
-						<p class="content">I whipped the Scotch tape from my pocket and said y ahora lo que hay que hacer es que todo tenga coherencia para que se puedan ver las cosas bajo.</p>
+						<p class="content">I whipped the Scotch tape from my pocket and said y ahora lo que hay que hacer es que todo tenga coherencia para que se puedan ver las cosas bajo el modelo de lo que es medium</p>
 						<footer class="footer">
 							<p class="date"><i class="bi_interface-clock"></i> June 11, 2014</p>
 							<span class="author">
