add new preload in discovers

--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -77,7 +77,8 @@
 			<br><br>
 			<a href="/users/specialty/all/page-1" class="am-report-link blue" href="">Volver a todas los artistas</a>
 		</div>
-		<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
+		<!-- <div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div> -->
+		<div class="loader extra-small gray loading hide" style="border-color: gree;"></div>
 	</div>
 </div>
 {% endblock %}
