--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -362,7 +362,7 @@
 
 	<a id="go-preload-modal" href="#preload-modal"></a>
 	<div id="preload-modal" style="display:none;">
-		<div class="loader">Loading...</div>
+		<div class="loader small"></div>
 	</div>
 
 	<div id="fb-root"></div>
