--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -52,8 +52,7 @@ white = #fff
 *------------------------------------*/
 .loader {
   margin: 6em auto;
-  // font-size: 10px;
-  font-size: 8px;
+  font-size: 10px;
   position: relative;
   text-indent: -9999em;
   border-top: 1.1em solid rgba(255, 255, 255, 0.2);
@@ -65,6 +64,17 @@ white = #fff
   transform: translateZ(0);
   -webkit-animation: load8 1.1s infinite linear;
   animation: load8 1.1s infinite linear;
+}
+.loader.small{
+	font-size 8px
+}
+.loader.extra-small{
+	font-size 5px
+}
+.loader.gray{
+  border-top: 1.1em solid rgba(gray, 0.25);
+  border-right: 1.1em solid rgba(gray, 0.25);
+  border-bottom: 1.1em solid rgba(gray, 0.25);
 }
 .loader,
 .loader:after {
