--- a/app/views/pages/collections.html
+++ b/app/views/pages/collections.html
@@ -78,7 +78,8 @@
 			<br><br>
 			<a href="/collections/category/all/page-1" class="am-report-link blue" href="">Volver a todas las colecciones</a>
 		</div>
-		<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
+		<!-- <div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div> -->
+		<div class="loader extra-small gray loading hide" style="border-color: gree;"></div>
 	</div>
 </div>
 {% endblock %}
