add preloads in profile

--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -144,7 +144,8 @@
       <div class="grid portfolio-container work-layout-discover">
 				<div class="grid-sizer"></div>
       </div>
-			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
+			<!-- <div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div> -->
+			<div class="loader extra-small gray loading hide" style="border-color: gree;"></div>
 		</div>
 	</div>
 
@@ -197,7 +198,8 @@
       <div class="grid collections-container work-layout-discover">
 				<div class="grid-sizer"></div>
       </div>
-			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
+			<!-- <div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div> -->
+			<div class="loader extra-small gray loading hide" style="border-color: gree;"></div>
 		</div>
 	</div>
 
@@ -237,7 +239,8 @@
       <div class="grid followings-container work-layout-discover">
 				<div class="grid-sizer"></div>
       </div>
-			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
+			<!-- <div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div> -->
+			<div class="loader extra-small gray loading hide" style="border-color: gree;"></div>
 		</div>
 	</div>
 
@@ -278,7 +281,8 @@
       <div class="grid followers-container work-layout-discover">
 				<div class="grid-sizer"></div>
       </div>
-			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
+			<!-- <div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div> -->
+			<div class="loader extra-small gray loading hide" style="border-color: gree;"></div>
 		</div>
 	</div>
 
