--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -40,14 +40,11 @@
 						<li class="am-Header-menu-item upload">
 							<a class="am-Upload-button" href="/user/{{user.username}}/work/add"><i class="fa fa-cloud-upload"></i> SUBIR</a>
 						</li>
-						<li class="am-Header-menu-item">
-							<a href="/user/{{user.username}}/notifications"><i class="fa fa-bell"></i></a>
-						</li>
-						<!-- <li class="am-Header-menu-item" style="padding-left: 22px;">
-							<div class="am-Header-icon">
+						<li class="am-Header-menu-item" style="padding-left: 10px;">
+							<a href="/user/{{user.username}}/notifications" class="am-Header-icon">
 								<i class="fa fa-bell-o"></i><span>29</span>
-							</div>
-						</li> -->
+							</a>
+						</li>
 						<!--<li class="am-Header-menu-item cart">
 							<div class="am-Header-icon">
 								<a href="{{user.url}}/cart"><i class="fa fa-shopping-cart"></i><span>10</span></a>
