add min height in notifications and feed

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3347,7 +3347,7 @@ body
 .feed
 	background #bac5c7
 	padding 10px 20px 40px 20px
-
+	min-height 500px
 	.feed-title
 		background white
 		max-width 540px
@@ -3559,6 +3559,7 @@ body
 .notifications
 	background #d8d8d8
 	padding 20px
+	min-height 500px
 	.inner
 		background white
 		border-radius 4px
