--- a/app/views/partials/elements/feed-work-created.html
+++ b/app/views/partials/elements/feed-work-created.html
@@ -1,7 +1,7 @@
 <script type="text/template" id="template-feed-work-created">
   <div class="feed-card u-margin-top-40">
     <header class="feed-card-header">
-      <a href="#" class="user">
+      <a href="/user/<%=User.username%>" class="user">
         <img src="<%= User.photo %>">&nbsp;&nbsp;&nbsp;
         <div>
           <p class="uppercase"><%= User.fullname %></p>
