--- a/app/views/pages/feed.html
+++ b/app/views/pages/feed.html
@@ -56,18 +56,24 @@
 					</div>
 				</div>
 				<div class="stats">
-					<div class="stat">
-						<p>18</p>
-						<p class="u-margin-top-7">seguidores</p>
-					</div>
-					<div class="stat">
-						<p>21</p>
-						<p class="u-margin-top-7">obras</p>
-					</div>
-					<div class="stat">
-						<p>264</p>
-						<p class="u-margin-top-7">siguiendo</p>
-					</div>
+					<a href="/user/{{user.username}}/followers">
+						<div class="stat">
+							<p>{{numbers[0]}}</p>
+							<p class="u-margin-top-7">seguidores</p>
+						</div>
+					</a>
+					<a href="/user/{{user.username}}/">
+						<div class="stat">
+							<p>{{numbers[1]}}</p>
+							<p class="u-margin-top-7">obras</p>
+						</div>
+					</a>
+					<a href="/user/{{user.username}}/followings">
+						<div class="stat">
+							<p>{{numbers[2]}}</p>
+							<p class="u-margin-top-7">siguiendo</p>
+						</div>
+					</a>
 				</div>
 			</div>
 		</div>
