users when user isn't following to nobody

--- a/app/views/pages/feed.html
+++ b/app/views/pages/feed.html
@@ -45,7 +45,7 @@
 
 	<div class="feed">
 		<div class="feed-title">
-			<div class="title">MY FEED</div>
+			<div class="title">ART FEED</div>
 			<div class="u-separator" style="background: #eee;"></div>
 			<div class="user-info">
 				<div class="avatar">
