--- a/app/views/user/work/edit.html
+++ b/app/views/user/work/edit.html
@@ -59,10 +59,10 @@
 					</label>
 				</div>
 				<div class="switch u-margin-top-10">
-					<p class="title">NSWF</p>
+					<p class="title">NSFW</p>
 					<span class="value">Off</span>
-					<input type="checkbox" name="nswf" id="nswf"/>
-					<label for="nswf">
+					<input type="checkbox" name="nsfw" id="nsfw"/>
+					<label for="nsfw">
 						<div class="am-Switch-button">
 							<i class="fa fa-bars"></i>
 						</div>
