--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -15,7 +15,7 @@
 					{% if user %}
 					<li class="am-Header-menu-item">
 						<a class="am-Header-text desktop" href="/feed">
-							<p>MI MURO</p><i class="bi_media-image-b"></i>
+							<p>ART FEED</p><i class="bi_media-image-b"></i>
 						</a>
 					</li>
 					{% endif %}
@@ -49,7 +49,7 @@
 						</li>
 						<li class="am-Header-menu-item" style="padding-left: 10px;">
 							<a href="/user/{{user.username}}/notifications" class="am-Header-icon">
-								<i class="fa fa-bell-o"></i><span>29</span>
+								<i class="fa fa-bell-o"></i><span>{{numOfNotifications}}</span>
 							</a>
 						</li>
 						<!--<li class="am-Header-menu-item cart">
